--- a/Week6/Portfolio_Page/index.html
+++ b/Week6/Portfolio_Page/index.html
@@ -31,7 +31,6 @@
                 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse efficitur turpis et augue rhoncus, non.</p>
                 	<a href="#" class="info">Read More</a>
                 </div>
-
             </div>
             <div class="view view-portfolio">
                 <img src="img/2.jpg">
@@ -40,12 +39,14 @@
                 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse efficitur turpis et augue rhoncus, non.</p>
                 	<a href="#" class="info">Read More</a>
                 </div>
+                </div>
                 <div class="view view-portfolio">
                 <img src="img/3.jpg">
                 <div class="mask">
                 	<h2>Portfolio Item</h2>
                 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse efficitur turpis et augue rhoncus, non.</p>
                 	<a href="#" class="info">Read More</a>
+                </div>
                 </div>
                 
             </div>
