--- a/Final/Portfolio/portfolio.html
+++ b/Final/Portfolio/portfolio.html
@@ -135,8 +135,8 @@
                         <button class="filter" data-filter=".concerts">Concerts</button>
                         <button class="filter" data-filter=".macro">Macro</button>
                         <button class="filter" data-filter=".lowlight">Low-Light</button>
-                        <br>
-                        <a href="photos/prelim" style="text-decoration: none;" download="photos/prelim">Download</a>
+                        <!-- <br>
+                        <a href="photos/prelim" style="text-decoration: none;" download="photos/prelim">Download</a> -->
                     </div>
                 </div>
                 <div class="photo-right">
@@ -337,6 +337,9 @@
             $webBtn.attr("data-scrollPos", $("#webPage").offset().left);
             $graphicBtn.attr("data-scrollPos", $("#graphicPage").offset().left);
 
+        //     $(window).resize(function(){location.reload();
+        // });
+
             //assign a function on click to each of our nav buttons
 
             $navButtons.click(function() {
@@ -349,6 +352,8 @@
                     // ease: Back.easeOut
                 });
             });
+
+
 
             var initialFloor = $("#homeBtn").attr("data-scrollPos");
 
